--- a/HB.css
+++ b/HB.css
@@ -1,9 +1,18 @@
+*{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+html{
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
 body{
     display: flex;
     height: 98vh;
     align-items: center;
     justify-content: center;
-	background: linear-gradient(360deg, rgba(235,201,255,1) 54%, rgba(214,0,245,0.5011600928074246) 85%);
+	background: linear-gradient(360deg, rgba(235,201,255,1) 24%, rgba(214,0,245,0.5011600928074246) 85%);
     background-color: rgb(235, 201, 255);
 }
 .glass{
@@ -220,7 +229,10 @@ button:hover{
 
 @media (max-width: 768px){
 	body{
-		max-height: 90vh;
-		max-width: 95vw;
+		max-height: 99vh;
+		max-width: 100vw;
+		margin: 0;
+		overflow-x: hidden;
+		overflow-y: hidden;
 	}
 }
