--- a/HB.css
+++ b/HB.css
@@ -69,8 +69,22 @@ button:hover{
     animation: fadeIn 4s ease forwards;
 	
 }
-#disp{
-
+.t2{
+	display: block;
+	width: auto;max-width: 45vh;
+	min-height: 10vh;
+	margin: 0 auto;
+    color: white;
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+    font-size: larger;
+    text-align: center;
+    font-family:cursive;
+}
+.image1{
+ 
+	left: 500%;
+	height: 30vh;
+	width: 45vh;
 }
 @keyframes fadeIn {
     20%{
@@ -202,15 +216,17 @@ button:hover{
 }
 
 .fadeOut{
-	animation: fadeout 1s forwards;
+	animation: fadeout 1s forwards ease-in;
 }
 @keyframes fadeout{
 	0%{
 		opacity: 1;
+		transform: translateY(0px);
 	}
 	50%{
 		opacity: 0;
 		visibility: hidden;
+		transform: translateY(15px);
 	}
 	100%{
 		opacity: 0;
@@ -229,10 +245,14 @@ button:hover{
 
 @media (max-width: 768px){
 	body{
-		max-height: 99vh;
+		max-height: 94vh;
 		max-width: 100vw;
 		margin: 0;
 		overflow-x: hidden;
 		overflow-y: hidden;
+	}
+	.t2{
+		max-width:75vw ;
+		margin: 2vh;
 	}
 }
