--- a/HB.css
+++ b/HB.css
@@ -245,8 +245,8 @@ button:hover{
 
 @media (max-width: 768px){
 	body{
-		max-height: 98%;
-		max-width: 100%;
+		max-height: 97vh;
+		max-width: 100vw;
 		margin: 0;
 		overflow-x: hidden;
 		overflow-y: auto;
