--- a/HB.css
+++ b/HB.css
@@ -82,10 +82,13 @@ button:hover{
 	position: absolute;
 	display: block;
 	margin: 0 auto;
-	height: 30vh;
-	width: 45vw;
+	height: 30vh;min-height: 200px;
+	width: 20vw;min-width: 150px;
 	top: 10vh;
+	border-radius: 10px;
+	box-shadow: 2px 2px 5px black;
 	animation: fadeInG 4s ease forwards;
+	z-index: 0;
 }
 @keyframes fadeIn {
     20%{
@@ -142,7 +145,7 @@ button:hover{
 
 @media (max-width: 768px){
 	body{
-		max-height: 92lvh;
+		max-height: 99lvh;
 		max-width: 100lvw;
 		margin: 0;
 	}
@@ -154,4 +157,8 @@ button:hover{
 		top: 90lvh;
 	left: 80lvw;
 	}
+}
+
+button:decrement{
+
 }
