--- a/sunflower2.css
+++ b/sunflower2.css
@@ -154,3 +154,14 @@ opacity: 0;
     }
     
 }
+.FlowerUp{
+ animation: Up 4s forwards ease-in-out!important;
+}
+@keyframes Up {
+    0%{transform: translateY(36vh);}
+    45%{transform: translateY(15vh); opacity:0.9; height: 25vh;
+        width: 25vh;}
+        55%{transform: translateY(15vh); opacity:0.9; height: 25vh;
+            width: 25vh;}
+        100%{opacity: 0;}
+}
