--- a/HB3.css
+++ b/HB3.css
@@ -18,7 +18,7 @@ body{
     text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     font-size: larger;
     text-align: center;
-    font-family:cursive;
+    font-family: "Ubuntu", sans-serif;
 	padding-bottom: 25vh;
 }
 .treatbox{
